# gdbus-learn-gui

./: .gitignore  CMakeLists.txt  README.md
scripts/: install_qt_ubuntu.sh  run_release.sh
src/: FileTransferState.cpp  FileTransferState.hpp  MainWindow.cpp  MainWindow.hpp  SyncMath.cpp  SyncMath.hpp  TestInfoCanvas.cpp  TestInfoCanvas.hpp  TrainingClientBridge.cpp  TrainingClientBridge.hpp  main.cpp
tests/: sync_math_tests.cpp
